# FoodSpotFinder

./: README.md  pyproject.toml
notebooks/: scrapper.py
notebooks/htmls/: food_spots_in_cherunniyoor.html
