[project]
name = "FoodSpotFinder"
version = "1.0.0"
description = "Default template for PDM package"
authors = [
    {name = "Akhil J P", email = "akhiljp5352@gmail.com"},
]
dependencies = []
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[tool.pdm.dev-dependencies]
dev = [
    "jupyter>=1.1.1",
    "playwright>=1.46.0",
    "pandas>=2.2.2",
]
